--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "codegenConfig": {
+    "name": "CallDetectionManagerSpec",
+    "type": "modules",
+    "jsSrcsDir": "specs",
+    "android": {
+      "javaPackageName": "com.calldetection"
+    }
+  },
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.76.0"
